tests/miniJava/neg/000159_mutation.MiniJava
class java { public static extends void Main ( String [ ] java ) { { } } }
